# ---------- pyproject.toml ----------
[build-system]
requires = ["setuptools", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name        = "eureka-audio"
version     = "0.1.0"
description = "Inference library for the Eureka-Audio foundation model"
readme      = "README.md"
license     = {text = "Apache-2.0"}
authors     = [{name = "Baidu Inc."}]

dependencies = [
  "torch>=2.8.0",
  "torchaudio>=2.8.0",
  "safetensors>=0.5.0",
  "numpy>=1.26.0",
  "loguru>=0.7.0",
  "flash-attn>=2.0",
  "transformers>=4.57.0",
  "soundfile",
  "librosa",
  "tqdm",
  "huggingface_hub",
  "accelerate",
  "qwen-vl-utils",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["eureka_infer*"]

[tool.setuptools.package-data]
"eureka_infer" = ["**/*"]

[project.urls]
Repository = "https://github.com/Alittleegg/Eureka-Audio"
